syntax = "proto3";
package grpcManager;
option go_package=".;grpcManager";
message Request {
    string type = 1;
    string from = 2;
    string token = 3;
    map<string,string> payload = 4;
}

message PeerListRequest {
    int32 number = 1;
    int32 lastIndex = 2;
    string name = 3;
    map<string,string> filters = 4;
}

message Peer {
    string id = 1;
    string name = 2;
}

message PeerListResponse {
    bool success = 1;
    int32 lastIndex = 2;
    repeated Peer peers = 3;
}

message Response {
    string type = 1;
    bool success = 2;
    map<string,string> payload = 3;
}

service GrpcManager {
    rpc Link(stream Request) returns (stream Response);
    rpc ListPeers(PeerListRequest) returns (PeerListResponse);
}